
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aiomanhole"
version = "0.6.0"
description = "Python module to provide a manhole in asyncio applications"
authors = ["Nathan Hoad <nathan@getoffmalawn.com>"]
license = "BSD-3-Clause"
readme = "README.rst"
repository = "https://github.com/nathan-hoad/aiomanhole"
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
mypy = "~0.910"
pytest = "~6.2.2"
pytest-asyncio = "~0.15.1"
pytest-cov = "~2.11.1"

[tool.black]
line-length = 88
target-version = ['py37']
skip-string-normalization = true

[tool.mypy]
python_version = "3.6"
check_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
